--- a/TimeTracker/TimeTracker.Client/wwwroot/index.html
+++ b/TimeTracker/TimeTracker.Client/wwwroot/index.html
@@ -11,6 +11,32 @@
     <app>Loading...</app>
 
     <script src="css/bootstrap/bootstrap.min.js"></script>
-    <script type="blazor-boot"></script>
+    <script type="blazor-boot">
+    </script>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+
+    <script>
+        // Load google charts
+        google.charts.load('current', { 'packages': ['corechart'] });
+
+        //google.charts.setOnLoadCallback(drawChart);
+
+        //Argument is an array in JSON format
+        Blazor.registerFunction('drawChart', (datastring, chartname) => {
+            var data = google.visualization.arrayToDataTable(JSON.parse(datastring));
+
+            // Optional; add a title and set the width and height of the chart
+            var options = { 'title': chartname, 'width': 400, 'height': 300 };
+
+            // Display the chart inside the <div> element with id="piechart"
+            var chart = new google.visualization.PieChart(document.getElementById('piechart'));
+            chart.draw(data, options);
+
+            // Your function currently has to return something. For demo
+            // purposes, we just return `true`.
+            return true;
+        });
+
+    </script>
 </body>
 </html>
