--- a/TimeTracker/TimeTracker.Client/wwwroot/index.html
+++ b/TimeTracker/TimeTracker.Client/wwwroot/index.html
@@ -22,14 +22,14 @@
         //google.charts.setOnLoadCallback(drawChart);
 
         //Argument is an array in JSON format
-        Blazor.registerFunction('drawChart', (datastring, chartname) => {
+        Blazor.registerFunction('drawPieChart', (datastring, chartname) => {
             var data = google.visualization.arrayToDataTable(JSON.parse(datastring));
 
             // Optional; add a title and set the width and height of the chart
             var options = { 'title': chartname, 'width': 400, 'height': 300 };
 
-            // Display the chart inside the <div> element with id="piechart"
-            var chart = new google.visualization.PieChart(document.getElementById('piechart'));
+            // Display the chart inside the <div> element with id="chart"
+            var chart = new google.visualization.PieChart(document.getElementById('chart'));
             chart.draw(data, options);
 
             // Your function currently has to return something. For demo
